<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:defaultValue="@string/preference_delay_default"
            android:key="@string/preference_delay_key"
            android:summary="@string/preference_delay_summary"
            android:title="@string/preference_delay_title" />
        <EditTextPreference
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:defaultValue="@string/preference_break_default"
            android:key="@string/preference_break_key"
            android:summary="@string/preference_break_summary"
            android:title="@string/preference_break_title" />
        <EditTextPreference
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:defaultValue="@string/preference_lap_default"
            android:key="@string/preference_lap_key"
            android:summary="@string/preference_lap_summary"
            android:title="@string/preference_lap_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_notification_by_color_key"
            android:title="@string/preference_notification_by_color_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_notification_by_sound_key"
            android:title="@string/preference_notification_by_sound_title" />
</PreferenceScreen>